--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
     <script src="https://kit.fontawesome.com/1477303799.js" crossorigin="anonymous"></script>
     <title>Ohmyfood | Réserver vos plats dans des restaurants d'exception</title>
 </head>
@@ -53,10 +53,10 @@
         <section id="restaurants" class="center">
             <h4 class="bold left font3 pad-bot">Restaurants</h4>
             <div class="card-container">
-                <a href="/HTML/la-palette-du-gout.html">
+                <a href="HTML/la-palette-du-gout.html">
                     <figure class="card pointer">
                     <span class="new">Nouveau</span>
-                    <img src="/images/restaurants/1.jpg">
+                    <img src="images/restaurants/1.jpg">
                         <figcaption class="flex-between label shadow">
                             <div class="left">
                                  <h5 class="bold label-title">La palette du goût</h5>
@@ -71,10 +71,10 @@
                 </a>
             </div>
             <div class="card-container">
-                <a href="/HTML/la-note-enchantée.html">
+                <a href="HTML/la-note-enchantée.html">
                     <figure class="card pointer">
                         <span class="new">Nouveau</span>
-                        <img src="/images/restaurants/2.jpg">
+                        <img src="images/restaurants/2.jpg">
                         <figcaption class="flex-between label shadow">
                             <div class="left">
                                 <h5 class="bold label-title">La note enchantée</h5>
@@ -89,9 +89,9 @@
                 </a>
             </div>
             <div class="card-container">
-                <a href="/HTML/a-la-francaise.html">
+                <a href="HTML/a-la-francaise.html">
                     <figure class="card pointer">
-                        <img src="/images/restaurants/3.jpg">
+                        <img src="images/restaurants/3.jpg">
                         <figcaption class="flex-between label shadow">
                             <div class="left">
                                 <h5 class="bold label-title">À la française</h5>
@@ -106,9 +106,9 @@
                 </a>
             </div>
             <div class="card-container">
-                <a href="/HTML/le-delice-des-sens.html">
+                <a href="HTML/le-delice-des-sens.html">
                     <figure class="card pointer">
-                        <img src="/images/restaurants/4.jpg">
+                        <img src="images/restaurants/4.jpg">
                         <figcaption class="flex-between label shadow">
                             <div class="left">
                                 <h5 class="bold label-title">Le délice des sens</h5>
