--- a/HTML/le-delice-des-sens.html
+++ b/HTML/le-delice-des-sens.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
     <script src="https://kit.fontawesome.com/1477303799.js" crossorigin="anonymous"></script>
     <title>Ohmyfood | Le délice des sens</title>
 </head>
@@ -19,7 +19,7 @@
     <!-- MAIN -->
     <main>
         <div class="img-container">
-            <img src="/images/restaurants/1.jpg">
+            <img src="images/restaurants/1.jpg">
         </div>
         <div class="menu">
             <div class="flex-center title">
