--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <a href="pages/la-palette-du-gout.html">
                     <figure class="card pointer">
                     <span class="new">Nouveau</span>
-                    <img src="images/restaurants/1.jpg">
+                    <img src="images/restaurants/1.jpg" alt="">
                         <figcaption class="flex-between label shadow">
                             <div class="left">
                                  <h5 class="bold label-title">La palette du goût</h5>
@@ -74,7 +74,7 @@
                 <a href="pages/la-note-enchantée.html">
                     <figure class="card pointer">
                         <span class="new">Nouveau</span>
-                        <img src="images/restaurants/2.jpg">
+                        <img src="images/restaurants/2.jpg" alt="">
                         <figcaption class="flex-between label shadow">
                             <div class="left">
                                 <h5 class="bold label-title">La note enchantée</h5>
@@ -91,7 +91,7 @@
             <div class="card-container">
                 <a href="pages/a-la-francaise.html">
                     <figure class="card pointer">
-                        <img src="images/restaurants/3.jpg">
+                        <img src="images/restaurants/3.jpg" alt="">
                         <figcaption class="flex-between label shadow">
                             <div class="left">
                                 <h5 class="bold label-title">À la française</h5>
@@ -108,7 +108,7 @@
             <div class="card-container">
                 <a href="pages/le-delice-des-sens.html">
                     <figure class="card pointer">
-                        <img src="images/restaurants/4.jpg">
+                        <img src="images/restaurants/4.jpg" alt="">
                         <figcaption class="flex-between label shadow">
                             <div class="left">
                                 <h5 class="bold label-title">Le délice des sens</h5>
