--- a/pages/la-palette-du-gout.html
+++ b/pages/la-palette-du-gout.html
@@ -19,7 +19,7 @@
     <!-- MAIN -->
     <main>
         <div class="img-container">
-            <img src="../images/restaurants/1.jpg">
+            <img src="../images/restaurants/1.jpg" alt="">
         </div>
         <div class="menu">
             <div class="flex-center title">
