--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <title>Ohmyfood | Réserver vos plats dans des restaurants d'exception</title>
 </head>
 <body> 
-    <!-- <div class="loader-container">
+    <div class="loader-container">
         <div class="loader"></div>
-    </div> -->
+    </div>
     <!-- HEADER -->
     <header>
         <h1 class="logo center">ohmyfood</h1>
